# copycat

./: Cargo.toml  README.md
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml  release.yml  reusable-ci.yml
assets/: languages.json
src/: files.rs  formatter.rs  language.rs  main.rs  tree.rs
