[package]
name = "copycat"
version = "0.1.0"
edition = "2021"
authors = ["Rufat Hajizada hajizada.rufat@gmail.com"]
description = "CLI tool to copy the contents of a repository directory to the system clipboard."

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
copypasta = "0.10.1"
ignore = "0.4.23"
once_cell = "1.21.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
tempfile = "3.19.1"
