[package]
name = "copycat"
version = "0.2.0"
edition = "2021"
authors = ["Rufat Hajizada hajizada.rufat@gmail.com"]
description = "CLI to convert directory contents into Markdown or ASCII tree (respects .gitignore), copy to clipboard or print."


[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
copypasta = "0.10.1"
ignore = "0.4.23"
once_cell = "1.21.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
tempfile = "3.19.1"
