[package]
name = "copycat"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Rufat Hajizada hajizada.rufat@gmail.com"]
description = "CLI tool to copy your project source code as Markdown to clipboard for context-aware responses from LLMs. "


[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
copypasta = "0.10.1"
ignore = "0.4.23"
once_cell = "1.21.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
tempfile = "3.19.1"
